@startuml entities

class User {

    - id: int
    - name: string
    - email: string
    - password: string
    - created_at: datetime
    - updated_at: datetime
==
    ~ getter
    ~ setter
}

class Photo {

    - id: int
    - user_id: int
    - url: string
    - created_at: datetime
    - tags: string
==
    ~ getUrl(): string
    ~ setUrl(url: string)
    ~ addTag(tag: Tag)
}

class Album {
    - id: int
    - user_id: int
    - name: string
    - created_at: datetime
    - updated_at: datetime
==
    ~ addPhoto(photo: Photo)
    ~ removePhoto(photo: Photo)
    ~ getPhotos(): Photo[]
    ~ getter
    ~ setter
}

class Tag {

    - id: int
    - name: string
    - created_at: datetime
    - updated_at: datetime
==
    ~ getter
    ~ setter
}

class Comment {

    - id: int
    - user_id: int
    - photo_id: int
    - content: string
    - created_at: datetime
    - updated_at: datetime
==
    ~ getter
    ~ setter
}

class Sharing {

    - id: int
    - user_id: int
    - photo_id: int
    - created_at: datetime
    - updated_at: datetime
==
    ~ getter
    ~ setter
}

User "1" -- "0..*" Photo : owns
User "1" -- "0..*" Album : owns
Photo "1" -- "0..*" Tag : has
User "1" -- "0..*" Comment : writes
Photo "1" -- "0..*" Comment : has
User "1" -- "0..*" Sharing : shares
Photo "1" -- "0..*" Sharing : is shared

@enduml